--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </ul>
             </div>
 
-            <div class="credits">Created by Jesper Hustad (aka. Snacksy), modified by MatejkoB</div>
+            <div class="credits">Created by Jesper Hustad (aka. Snacksy), modified by Denzer</div>
         </div>
 
         <div id="overlay">
