--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 
             <div class="speed-control">
                 <input type="range" id="speed-control" name="speed-control" min="5" max="30" value="10" />
-                <label class="speed-label" for="speed-control">Puzzle time: <span class="time-display">10</span></label>
+                <label class="speed-label" for="speed-control">Czas układanki: <span class="time-display">10</span></label>
             </div>
             <div class="puzzle-control">
                 <input type="range" id="puzzle-control" name="puzzle-control" min="3" max="6" value="4" />
-                <label class="puzzle-label" for="puzzle-control">Puzzle Amount: <span class="puzzle-display">4</span></label>
+                <label class="puzzle-label" for="puzzle-control">Ilość puzzli: <span class="puzzle-display">4</span></label>
             </div>
             <button id="help-on" class="question-button">?</button>
             <a href="https://github.com/Deenzeer/BankHackingv2">
