--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="center screen-square">
                 <div class="center text-container" , id="text-container">
                     <img src="assets/spy-icon.png" class="spy-icon" />
-                    <h3 class="loading-text" id="loading-text"><span class="capital">E</span>NAWIĄZYWANIE POŁĄCZENIA</h3>
+                    <h3 class="loading-text" id="loading-text"><span class="capital"></span>NAWIĄZYWANIE POŁĄCZENIA</h3>
                 </div>
 
                 <div class="number-container hidden" id="number-container"></div>
